--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<h1></h1>
+<h1>Members</h1>
+    <ul>
+        <li *ngFor="let member of members">
+            {{member.name}}
+        </li>
+    </ul> 
+
