--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <h1>Members</h1>
     <ul>
-        <li *ngFor="let member of members">
-            {{member.name}}
+        <li *ngFor="let member of members" (click)="memberClicked(member)">
+           {{member.id}} - {{member.name}}
         </li>
     </ul> 
 
+<router-outlet></router-outlet>
