--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,24 @@
-<h1>Members</h1>
-    <ul>
-        <li *ngFor="let member of members" (click)="memberClicked(member)">
-           {{member.id}} - {{member.name}}
-        </li>
-    </ul> 
+<h3>Members</h3>
+<div class="table-wrapper">
+    <table>
+        <thead>
+            <tr >
+                <th>Id</th>
+                <th>Nome</th>
+            </tr>
+
+        </thead>
+        <tbody>
+            <tr *ngFor="let member of members" (click)="memberClicked(member)">
+                <td>{{member.id}}</td>
+                <td>{{member.name}}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
+
+
+
 
 <router-outlet></router-outlet>
